--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <script>function show(shown, hidden) {
         document.getElementById(shown).style.display = 'block';
@@ -83,7 +83,7 @@
         }
 </style>
 
-<body style="background-image: url('backgroundimage.jpg'); ">
+<body style="background-color:#E5E7D3;">
     <!--<center><span class="yellowtext">M</span>&nbsp; <span class=" greentext">H</span> <span class="bluetext">P</span></center>-->
     <h1 class="center">Welcome to MHProgramming</h1>
 </body>
