--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         }
 </style>
 
-<body style="background: url('../backgroundimage.jpg');">
+<body style="background: url('websitepics/backgroundimage.jpg');">
     <!--<center><span class="yellowtext">M</span>&nbsp; <span class=" greentext">H</span> <span class="bluetext">P</span></center>-->
     <h1 class="center">Welcome to MHProgramming</h1>
 </body>
