--- a/index.html
+++ b/index.html
@@ -133,6 +133,13 @@
     <script>
         function aboutPage() {
             document.getElementById("about").innerHTML = "Hello World";
+            <p>&nbsp;</p>
+                <p>README.txt</p>
+                <p>&nbsp;</p>
+                <div id="list">
+                    <p><iframe src="websitepics/Senior Capstone Wifi Module Code.txt" frameborder="0" height="400"
+                        width="95%"></iframe></p>
+                </div>
         }
     </script>
     
