--- a/index.html
+++ b/index.html
@@ -130,26 +130,28 @@
         ...woot
     </div>
     <p id="about"><</p>
-    <script>
-        function aboutPage() {
-            document.getElementById("about").innerHTML = "Hello World";
+    <script>function aboutPage() {
+
             <p>&nbsp;</p>
                 <p>README.txt</p>
                 <p>&nbsp;</p>
                 <div id="list">
-                    <p><iframe src="websitepics/Senior Capstone Wifi Module Code.txt" frameborder="0" height="400"
+                    document.getElementById("about").innerHTML = <p><iframe src="websitepics/Senior Capstone Wifi Module Code.txt" frameborder="0" height="400"
                         width="95%"></iframe></p>
                 </div>
-        }
-    </script>
-    
+            }</script>
 
-    
+
+
 </body>
 
 
 <!--This is the table showing the previous emails sent-->
 <!--
+
+document.getElementById("about").innerHTML = "Hello World";//////////////////////////////////////////////
+
+
 <h1>Chart Header Goes Here</h1>
 <table style="background-image: linear-gradient(to right, #f8ea18, #5675fe)">
     <tr>
@@ -188,8 +190,8 @@
         <td> Homework Due</td>
         <td> 11/19</td>
     </tr>
-</table> 
-</html> 
+</table>
+</html>
 -->
 
 </html> 
