--- a/index.html
+++ b/index.html
@@ -131,17 +131,10 @@
     </div>
     <p id="about"><</p>
     <script>function aboutPage() {
+    document.getElementById("about").innerHTML ="websitepics/Senior Capstone Wifi Module Code.txt";
+            
 
-            <p>&nbsp;</p>
-                <p>README.txt</p>
-                <p>&nbsp;</p>
-                <div id="list">
-                    document.getElementById("about").innerHTML = <p><iframe src="websitepics/Senior Capstone Wifi Module Code.txt" frameborder="0" height="400"
-                        width="95%"></iframe></p>
-                </div>
-            }</script>
-
-
+    </script>
 
 </body>
 
