--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     </div>
     <p id="about"><</p>
     <script>function aboutPage() {
-    document.getElementById("about").innerHTML ="websitepics/Senior Capstone Wifi Module Code.txt";
+    document.getElementById("about").innerHTML = "Hello World";
             
 
     </script>
