--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 <body>
     <div id="mySidenav" class="sidenav">
         <!--<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>-->
-        <a onclick="aboutPage()">About</a> <br />
+        <a href="aboutPage()">About</a> <br />
         <a href="#">Services</a> <br />
         <a href="#">Clients</a> <br />
         <a href="#">Contact</a> <br />
